# binarystream

./: .gitattributes  .gitignore  Cargo.toml  README.md  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: CI.yml
__test__/: index.spec.mjs  index.spec.ts  test.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: endianness.rs  endianness.ts  index.ts  lib.rs  stream.rs  stream.ts
src/stream/: endianness.rs  mod.rs  stream.rs
src/stream/floats/: float32.rs  float64.rs  mod.rs
src/stream/misc/: uuid.rs
src/stream/signed/: byte.rs  int16.rs  int24.rs  int32.rs  int64.rs  int8.rs  long.rs  short.rs
src/stream/strings/: string16.rs  string32.rs  varstring.rs
src/stream/unsigned/: bool.rs  uint16.rs  uint24.rs  uint32.rs  uint64.rs  uint8.rs  ulong.rs  ushort.rs
src/stream/varints/: varint.rs  varlong.rs  zigzag.rs  zigzong.rs
src/types/: bool.rs  bool.ts  data-type.ts  data_type.rs  float32.ts  float64.ts  index.ts  mod.rs
src/types/float/: float32.rs  float64.rs  mod.rs
src/types/floats/: float32.rs  float64.rs  mod.rs
src/types/misc/: uuid.rs
src/types/signed/: byte.rs  index.ts  int16.rs  int16.ts  int24.rs  int24.ts  int32.rs  int32.ts  int64.rs  int64.ts  int8.rs  int8.ts  long.rs  mod.rs  short.rs  zigzag.rs  zigzag.ts  zigzong.rs  zigzong.ts
src/types/string/: index.ts  mod.rs  string16.rs  string16.ts  string32.rs  string32.ts  (+2 more)
(+26 files in other folders)
