[package]
edition = "2021"
name = "binarystream"
version = "1.2.1"
description = "Binarystream is a simple package designed to simplify streaming of binary data in Javascript, while being written in Rust."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/SerenityJS/binarystream"
documentation = "https://docs.rs/binarystream"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi8"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
