
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "binarystream"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "3.0.0-beta"

  [dependencies.napi]
  features = ["napi8"]
  version  = "3.0.0-beta"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
